<resources>
    <string name="app_name">Settings</string>
    <string name="av_sync_delay">AV-SYNC DELAY</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="app">App</string>
    <string name="version_1_1_82">Version 1.1.82</string>
    <string name="about">About</string>
    <string name="korean">한국인 (Korean)</string>
    <string name="english_united_states">English (United States)</string>
    <string name="set_voice_recording_language">Set Voice Recording Language</string>
    <string name="set_audio_video_sync_delay">Set Audio-Video Sync Delay</string>
    <string name="_45">45</string>
    <string name="todo">TODO</string>
</resources>