<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#b0b2b6"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_light"
            android:gravity="center|start"
            android:text="@string/settings"
            android:paddingTop="5dp"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppins_light"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/av_sync_delay"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="40dp"
        app:cardBackgroundColor="@color/cardBgColor"
        android:layout_marginTop="10dp"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_audio_video_sync_delay"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:thumbTint="@color/buttonColor"
                    android:progressTint="@color/buttonColor"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15sp"
                    android:progress="45"/>

                <TextView
                    android:id="@+id/progressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_45"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="30dp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins_light"
        android:layout_marginEnd="30dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/language"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardBgColor"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_voice_recording_language"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="20sp"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp">
                <RadioButton
                    android:id="@+id/radioBtn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english_united_states"
                    android:buttonTint="@color/buttonColor"
                    android:textSize="19sp"
                    android:paddingStart="20sp"
                    tools:ignore="RtlSymmetry" />
                <RadioButton
                    android:id="@+id/radioBtn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korean"
                    android:checked="true"
                    android:buttonTint="@color/buttonColor"
                    android:textSize="19sp"
                    android:paddingStart="20sp"/>
            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        android:text="@string/about"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardBgColor"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_1_1_82"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"
                android:textSize="13sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>